Updated new library submission workflow to reflect new consensus on policy.

--- a/development/submissions.html
+++ b/development/submissions.html
@@ -39,43 +39,47 @@ http://www.boost.org/development/website_updating.html
 
               <ul class="toc">
                 <li>
-                  <a href="#Learn">Learn about Boost</a>
+                  <a href="#Learn">1. Learn about Boost</a>
                 </li>
 
                 <li>
-                  <a href="#interest">Determine interest</a>
+                  <a href="#interest">2. Determine interest</a>
                 </li>
 
                 <li>
-                  <a href="#Preliminary">Preliminary submission</a>
+                  <a href="#Development">3. Start Development</a>
                 </li>
 
                 <li>
-                  <a href="#Refinement">Refinement</a>
+                  <a href="#Refinement">4. Refinement</a>
                 </li>
 
                 <li>
-                  <a href="#Submission">Submission for review</a>
+                  <a href="#Seconded">5. Getting seconded for review</a>
                 </li>
 
                 <li>
-                  <a href="#Review">Formal Review</a>
+                  <a href="#Seeking">6. Seek a Review Manager</a>
                 </li>
 
                 <li>
-                  <a href="#SitePosting">Web site posting</a>
+                  <a href="#Review">7. Formal Review</a>
                 </li>
 
                 <li>
-                  <a href="#People">People page</a>
+                  <a href="#SitePosting">8. Web site posting</a>
                 </li>
 
                 <li>
-                  <a href="#Lifecycle">Lifecycle</a>
+                  <a href="#People">9. People page</a>
+                </li>
+
+                <li>
+                  <a href="#Lifecycle">10. Lifecycle</a>
                 </li>
               </ul>
 
-              <h2><a name="Learn" id="Learn"></a>Learn about Boost</h2>
+              <h2><a name="Learn" id="Learn"></a>1. Learn about Boost</h2>
 
               <p>Subscribe to the <a href="/community/groups.html#main">main
               developers mailing list</a> for a while, or look through the
@@ -93,7 +97,8 @@ http://www.boost.org/development/website_updating.html
               library without even looking at it, you should go
               elsewhere.</p>
 
-              <h2><a name="interest" id="interest"></a>Determine
+
+              <h2><a name="interest" id="interest"></a>2. Determine
               interest</h2>
 
               <p>While participation in prior reviews is not a prerequisite
@@ -101,12 +106,37 @@ http://www.boost.org/development/website_updating.html
               because it will acquaint you with the process and the emotional
               demands of a formal review.</p>
 
-              <p>Potential library submitters should use the Boost developers
-              <a href="/community/groups.html">mailing list</a> and <a href=
-              "http://blincubator.com">Boost Library Incubator</a> as forums to
-              gauge interest a possible submission.</p>
+              <p>Potential library submitters should be careful to
+              research the prior art before beginning to design a
+              new library. Too often we see people arrive at Boost with a new
+              library into which they have invested many hours, only to find
+              that Boost already has that functionality, and sometimes has
+              had it for years. They should also research libraries being
+              developed by others intended for Boost - if you have an itch
+              to scratch, often so have had others and collaboration
+              developing their library is usually considerably less work
+              than developing your own.</p>
 
-              <p>A message might be as simple as "Is there any interest in a
+              <p>Potential library submitters should also be careful to
+              publicise, canvas for and gauge interest in their library,
+              ideally before beginning it, but certainly before submitting it
+              for review. One can build a beautiful cathedral of awesome design,
+              but due to the nature of the Boost review procees, we can only
+              review libraries with enough mass appeal to form a viable peer
+              review. Ensuring that enough people are interested in your
+              potential library goes a very long way to achieving that.</p>
+
+              <p>There are many places to publicise and canvas for a library.
+              The Boost developers <a href="/community/groups.html">mailing
+              list</a> and the <a href="http://blincubator.com">Boost Library
+              Incubator</a> ought to be your first stop in gauging interest
+              in a possible new C++ library. Be prepared to pivot your design
+              and focus until your proposed library finds traction. Other
+              places useful for gauging interest in a library might be <a href=
+              "https://www.reddit.com/r/cpp/">Reddit/r/cpp</a>.</p>
+
+              <p>A message to the Boost developers mailing list
+              might be as simple as "Is there any interest in a
               library which solves Travelling Salesperson problems in linear
               time?"</p>
 
@@ -120,25 +150,26 @@ http://www.boost.org/development/website_updating.html
               a project hosting service such as sourceforge, github, google
               code, bitbucket etc.</p>
 
-              <h2><a name="Preliminary" id="Preliminary"></a>Preliminary
-              submission</h2>
+
+              <h2><a name="Development" id="Development"></a>3. Start
+              Development</h2>
 
               <p>If response to an initial query indicates interest, then
-              make your preliminary submission publicly available if you
+              make your library publicly available if you
               haven't already done so.</p>
 
-              <p>Please post your code to a version control system such as
-              Github, and make your documentation available in HTML format on
-              a public website. An issue tracker is also highly
-              recommended.</p>
+              <p>Please commit your code to a version control system such as
+              Git, and make your documentation available in HTML format on
+              a public website such as Githib. An issue tracker such as one
+              provided by Github is also highly recommended.</p>
 
-              <p>The submission should contain material as if on the
-              boost.org web site. The closer the submission file mirrors the
+              <p>Your library should contain material as if on the
+              boost.org web site. The closer your library mirrors the
               final directory structure and format of the web site, the
               better. This makes it possible for reviewers to simply copy
               your code into the Boost distribution for testing.</p>
 
-              <p>Please verify that your submission compiles and runs under
+              <p>Please verify that your library compiles and runs under
               at least two compilers. This flushes out obvious portability
               problems.</p>
 
@@ -151,14 +182,15 @@ http://www.boost.org/development/website_updating.html
               submitting your library to the <a href=
               "http://blincubator.com">Boost Library Incubator</a>.</p>
 
-              <h2><a name="Refinement" id="Refinement"></a>Refinement</h2>
 
-              <p>Discuss, refine, resubmit. Repeat until satisfied.</p>
+              <h2><a name="Refinement" id="Refinement"></a>4. Refinement</h2>
+
+              <p>Discuss, refine, rewrite. Repeat until satisfied.</p>
 
               <p>The exact details of this process varies a lot. Sometimes it
               is public, on the mailing list, sometimes a lot of discussion
               happens in private emails. For some libraries the process is
-              over quickly, for others it goes on for months.&nbsp; It's
+              over quickly, for others it goes on for months. It's
               often challenging, and sometimes leads off in completely
               unexpected directions.</p>
 
@@ -171,10 +203,51 @@ http://www.boost.org/development/website_updating.html
               <a href="https://svn.boost.org/trac/boost/wiki/BestPracticeHandbook">
               found on the Boost wiki</a>.</p>
 
-              <h2><a name="Seeking" id="Seeking"></a>Seek a Review
+
+              <h2><a name="Seconded" id="Seconded"></a>5. Getting seconded
+              for review</h2>
+
+              <p>When you feel that your library is ready for entry into Boost,
+              you need to find at least one member (but preferably a lot
+              more) of the Boost community who will publicly endorse
+              with their names and reputation your library for entry into
+              Boost. A simple method of achieving this is to post to
+              <a href="/community/groups.html">the Boost developers mailing
+              list</a> with a short description of your library, links
+              to its github and documentation, and ask for endorsements.</p>
+
+              <p>It is expected that those who endorse a library for review
+              will have performed a cursory check of the library's
+              suitability for Boost in terms of documentation, fit with
+              the rest of Boost and usefulness. A public endorsement of a
+              library for review means that from a cursory check, they believe
+              that a library stands some chance of being accepted during a
+              formal review. It is also expected that they will provide a
+              review of the library when the formal review is undertaken,
+              though this is not binding.</p>
+
+              <p>Once you have a list of people who have publicly endorsed
+              your library for review, you can email <a
+              href="/community/reviews.html#Wizard">the Review Wizards</a>
+              to ask for your library to be added to <a
+              href="/community/review_schedule.html">the review queue</a>
+              where the following information will be shown:</p>
+
+              <ul>
+                <li>Submission</li>
+                <li>Submitter</li>
+                <li>Links to Source (GitHub), Documentation (HTML website)
+                and any Incubator entry</li>
+                <li>Names of members who endorse this submission for review</li>
+                <li>Review Manager</li>
+                <li>Review Dates</li>
+              </ul>
+
+
+              <h2><a name="Seeking" id="Seeking"></a>6. Seek a Review
               Manager</h2>
 
-              <p>In order to have a formal review, the author must find a
+              <p>In order to schedule a formal review, the author must find a
               capable volunteer to manage the review. This should be someone
               with knowledge of the library domain, and experience with the
               review process. See <a href="/community/reviews.html">Formal
@@ -189,25 +262,11 @@ http://www.boost.org/development/website_updating.html
               managing a review is a serious commitment; for this reason,
               it's better to contact the member off-list.</p>
 
-              <p>Once a potential review manager has been found, contact the
-              review wizards for approval. The wizards approve review
+              <p>Once a potential review manager has been found, <a
+              href="/community/reviews.html#Wizard">contact the
+              review wizards</a> for approval. The wizards approve review
               managers based on their level of participation in the Boost
               community.</p>
-
-              <h2><a name="Review" id="Review"></a>Formal Review</h2>
-
-              <p>Before asking for formal review, your submission should be
-              easily accessible to all. Please verify that your submission
-              compiles and runs under at least two compilers. This flushes
-              out obvious portability problems. If you don't have access to a
-              second compiler, ask for help on the Boost mailing list.</p>
-
-              <p>Once a library author feels a submission has matured enough
-              for the formal review, and has found someone to manage the
-              review, the author sends a message requesting a formal review
-              to the mailing list and the review wizards. Please use a
-              subject in the form "Review Request: library" where
-              <i>library</i> is replaced by the library name.</p>
 
               <p>The review wizards will coordinate with the author and
               review manager to schedule a date convenient for the author and
@@ -216,10 +275,31 @@ http://www.boost.org/development/website_updating.html
               <p>See <a href="/community/reviews.html">Formal Review
               Process</a> for details.</p>
 
-              <p>Formal Review schedules are posted on the <a href=
-              "/community/review_schedule.html">web site</a>.</p>
 
-              <h2><a name="SitePosting" id="SitePosting"></a>Boost web site
+              <h2><a name="Review" id="Review"></a>7. Formal Review</h2>
+
+              <p>Before your formal review begins, quadruple check your
+              library. Check that every code example works, that all unit
+              tests pass on at least two compilers on at least two major
+              operating systems, and run your documentation through a
+              spelling and grammar checker.</p>
+
+              <p>Please do not modify your library on its master branch
+              during a review. Instead modify develop branch in response
+              to feedback and reviews. For bigger ticket items of work,
+              open issues on your issue tracker so interested people can
+              track the fixing of specific issues raised.</p>
+
+              <p>The review manager will consider all the reviews made by
+              members of the community and arrive at a decision on
+              whether your library is rejected, conditionally accepted or
+              unconditionally accepted. They will post a report summarising
+              their decision publicly. If conditions are attached to
+              acceptance, you will need to implement those conditions or
+              else undergo an additional formal review.</p>
+
+
+              <h2><a name="SitePosting" id="SitePosting"></a>8. Boost web site
               posting</h2>
 
               <p>Once an accepted library is ready for inclusion on the Boost
@@ -228,7 +308,8 @@ http://www.boost.org/development/website_updating.html
               there. Contact the moderators if you need write access or
               direct use of the repository isn't possible for you.</p>
 
-              <h2><a name="People" id="People"></a>People page</h2>
+
+              <h2><a name="People" id="People"></a>9. People page</h2>
 
               <p>If the boost.org web site doesn't already have your capsule
               biography and picture (optional, with not-too-serious pictures
@@ -240,7 +321,8 @@ http://www.boost.org/development/website_updating.html
               editing software and can do the image preparation if
               necessary.</p>
 
-              <h2><a name="Lifecycle" id="Lifecycle"></a>Lifecycle</h2>
+
+              <h2><a name="Lifecycle" id="Lifecycle"></a>10. Lifecycle</h2>
 
               <p>Libraries are software; they lose their value over time if
               not maintained. Postings on the Boost developers or users
