--- a/users/history/version_1_64_0.html
+++ b/users/history/version_1_64_0.html
@@ -3,10 +3,21 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>In Progress Releases</title>
+  <title>Version 1.64.0 beta 1</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
+
+  <style type="text/css">
+/*<![CDATA[*/
+  #content .news-description ul {
+    list-style: none;
+  }
+  #content .news-description ul ul {
+    list-style: circle;
+  }
+  /*]]>*/
+  </style>
 
   <!--[if IE 7]> <style type="text/css"> body { behavior: url(/style-v2/csshover3.htc); } </style> <![endif]-->
 </head>
@@ -21,20 +32,18 @@
         <div class="section" id="intro">
           <div class="section-0">
             <div class="section-title">
-              <h1>In Progress Releases</h1>
+              <h1>Version 1.64.0</h1>
             </div>
-            <div class="section-alert"><p>Note: The release notes
-            on this page are for releases still under development.
-            Please don't use this page as a source of information,
-            it's here for development purposes only. Everything is
-            subject to change.</p></div>
 
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.64.0</span></h2>
+              "news-title">Version 1.64.0 beta 1</span></h2>
 
-              <p><span class=news-date">In Progress</span></p>
-
+              <p><span class=news-date">March 23rd, 2017 14:19 GMT</span></p>
+              <p><a href="/doc/libs/master/">Documentation</a>
+              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.1/source/boost_1_64_0_b1.tar.bz2">boost_1_64_0_b1.tar.bz2</a></td><td>b5c5abf127a3f723dafcc7cf55876c1bda9f014fb1b117f6a7f769e3cc407c4f</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.1/source/boost_1_64_0_b1.tar.gz">boost_1_64_0_b1.tar.gz</a></td><td>a7fe98a9a9f615f6fa68d8ea09ce725d19e3a4fe4719c21c9db29dff88b3b6e3</td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.1/source/boost_1_64_0_b1.7z">boost_1_64_0_b1.7z</a></td><td>8f0ba6b73fad15115049f9b3e7e27eae43be10a94b51a57142f3a27e55ef4beb</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.1/source/boost_1_64_0_b1.zip">boost_1_64_0_b1.zip</a></td><td>593005661af8dfe132b2b16bc2cd41339e6acd58456913f353d765090d7868f7</td></tr></table>
               <div class="news-description">
                 <div class="description">
 
