Better wording for unordered/hash release notes

--- a/users/history/version_1_64_0.html
+++ b/users/history/version_1_64_0.html
@@ -315,7 +315,8 @@
           <ul>
             <li>
               <div>
-                Stop using removed function objects in new versions of Visual C++.
+                Stop using <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">unary_function</span></code> and <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">binary_function</span></code> when they're not
+                available.
               </div>
             </li>
           </ul>
@@ -707,8 +708,10 @@
           <ul>
             <li>
               <div>
-                Initial support for new C++17 member functions: <code><span class="identifier">insert_or_assign</span></code>,
-                <code><span class="identifier">try_emplace</span></code>, <code><span class="identifier">merge</span></code> and <code><span class="identifier">extract</span></code>.
+                Initial support for new C++17 member functions: <code><span class="identifier">insert_or_assign</span></code>
+                and <code><span class="identifier">try_emplace</span></code> in
+                <code><span class="identifier">unordered_map</span></code>, <code><span class="identifier">merge</span></code> and <code><span class="identifier">extract</span></code>
+                in all containers.
               </div>
             </li>
           </ul>
