Addressed some of David Sankel's concerns about tone.

--- a/development/submissions.html
+++ b/development/submissions.html
@@ -86,16 +86,18 @@ http://www.boost.org/development/website_updating.html
               <a href="/community/groups.html#archive">archives</a>. Click
               around the <a href="/">web site</a>. Understand the <a href=
               "requirements.html">Requirements</a>. Read the rest of this
-              page to learn about the process. Otherwise, you will just end
-              up wasting everyone's time.</p>
+              page to learn about the process. Do some research on google
+              to study the commitment required to get a library into Boost.
+              </p>
 
               <p>There is a culture associated with Boost, aimed at
               encouraging high quality libraries by a process of discussion
-              and refinement.</p>
-
-              <p>If what you really want is a site that will just post your
-              library without even looking at it, you should go
-              elsewhere.</p>
+              and refinement. Some libraries get past community review
+              in less than two years from first concept being struck, but
+              most take longer, sometimes a lot longer. Five to ten years
+              to get a library past review and into Boost is not unheard of,
+              and you should prepare yourself for the personal investment
+              required.</p>
 
 
               <h2><a name="interest" id="interest"></a>2. Determine
