Undid some of David's more contentious edits

--- a/development/submissions.html
+++ b/development/submissions.html
@@ -140,7 +140,8 @@ http://www.boost.org/development/website_updating.html
 
               <p>A message to the Boost developers mailing list
               might be as simple as "Is there any interest in a
-              library which solves X?"</p>
+              library which solves Travelling Salesperson problems in linear
+              time?"</p>
 
               <p>A bit of further description or snippet of code may be
               helpful. By the way, the preferred format for messages on the
@@ -294,7 +295,7 @@ http://www.boost.org/development/website_updating.html
               <p>The review manager will consider all the reviews made by
               members of the community and arrive at a decision on
               whether your library is rejected, conditionally accepted or
-              unconditionally accepted. He or she will post a report summarising
+              unconditionally accepted. They will post a report summarising
               the decision publicly. If conditions are attached to
               acceptance, you will need to implement those conditions or
               else undergo an additional formal review.</p>
@@ -331,8 +332,8 @@ http://www.boost.org/development/website_updating.html
               please plan to maintain your library over time. If you no
               longer can or wish to maintain your library, please post a
               message on the Boost developers mailing list asking for a new
-              maintainer to volunteer and then spend the time to help him or
-              her take over.</p>
+              maintainer to volunteer and then spend the time to help them
+              take over.</p>
 
               <p>Orphaned libraries will be put in the care of the <a href=
               "https://svn.boost.org/trac/boost/wiki/CommunityMaintenance">Community
