--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -490,7 +490,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Michael Caisse</td>
 
-                    <td>-</td>
+                    <td>July 1, 2017 - July 10, 2017</td>
                   </tr>
 		  
                   <tr>
