Nowide is scheduled.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -195,7 +195,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Frédéric Bron</td>
 
-                    <td>-</td>
+                    <td>June 12, 2017 - June 21, 2017</td>
                   </tr>
 
                   <tr>
