--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -556,7 +556,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Ion Gaztañaga</td>
 
-                    <td>-</td>
+                    <td>May 3, 2017 - May 12, 2017</td>
                   </tr>
 
                   <tr>
