Fix nested lists in process release notes
Quickbook 1.6 isn't too great at nesting blocks in lists, so need to use
explicit markup to stop it getting confused.

--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -39,6 +39,57 @@
                 <div class="description">
 
 
+  <div id="version_1_64_0.new_libraries">
+    <h3><span class="link">New Libraries</span></h3>
+    <ul>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/process/">Process</a>:</span>
+  Process library by Klemens
+          D. Morgenstern, that provides cross platorm ways to allows you to:
+        </div>
+        <ul>
+          <li>
+            <div>
+              create child processes
+            </div>
+          </li>
+          <li>
+            <div>
+              setup streams for child processes
+            </div>
+          </li>
+          <li>
+            <div>
+              communicate with child processes through streams (synchronously or
+              asynchronously)
+            </div>
+          </li>
+          <li>
+            <div>
+              wait for processes to exit (synchronously or asynchronously)
+            </div>
+          </li>
+          <li>
+            <div>
+              terminate processes
+            </div>
+          </li>
+        </ul>
+        <div>
+          Broken feature:
+        </div>
+        <ul>
+          <li>
+            <div>
+              <a href="https://github.com/klemens-morgenstern/boost-process/issues/67">GitHub
+              #67: <em>"group.wait() does not return"</em></a>.
+            </div>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
   <div id="version_1_64_0.updated_libraries">
     <h3><span class="link">Updated Libraries</span></h3>
     <ul>
