Load in release/doc info for 1.64.0 beta2

--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -34,7 +34,9 @@
               "news-title">Version 1.64.0</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-
+              <table class="download-table"><caption>Development Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.tar.bz2">boost_1_64_0_b2.tar.bz2</a></td><td>92ec7cbf1e77c5979e381dd8104f9e96c0471c276e566272751a981d806db94b</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.tar.gz">boost_1_64_0_b2.tar.gz</a></td><td>da5670892b7b572808491b13a7b9421c3c18e6f395d6a5ec822466db466eda01</td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.7z">boost_1_64_0_b2.7z</a></td><td>49c9339b9d8e7b2610ef84c80cd10b2252c119ebcc3222450beb0e94c1da1522</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.zip">boost_1_64_0_b2.zip</a></td><td>61d6e29e8a1d7503fe13a9d916842f0ec2e625f733b98b29ce563f8cbdb482bf</td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -44,7 +46,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/process/">Process</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/process/">Process</a>:</span>
   Process library by Klemens
           D. Morgenstern, that provides cross platorm ways to allows you to:
         </div>
@@ -95,7 +97,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/any/">Any</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/any/">Any</a>:</span>
           <ul>
             <li>
               <div>
@@ -129,7 +131,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/atomic/">Atomic</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/atomic/">Atomic</a>:</span>
           <ul>
             <li>
               <div>
@@ -142,7 +144,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/config/">Config</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/config/">Config</a>:</span>
           <ul>
             <li>
               <div>
@@ -155,7 +157,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -190,7 +192,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -222,7 +224,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/conversion/">Conversion</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/conversion/">Conversion</a>:</span>
           <ul>
             <li>
               <div>
@@ -246,7 +248,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/core/">Core</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/core/">Core</a>:</span>
           <ul>
             <li>
               <div>
@@ -272,7 +274,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/coroutine2/">Coroutine2</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/coroutine2/">Coroutine2</a>:</span>
           <ul>
             <li>
               <div>
@@ -284,7 +286,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/dll/">DLL</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/dll/">DLL</a>:</span>
           <ul>
             <li>
               <div>
@@ -325,7 +327,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/fiber/">Fiber</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/fiber/">Fiber</a>:</span>
           <ul>
             <li>
               <div>
@@ -353,7 +355,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/functional/hash/">Hash</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/functional/hash/">Hash</a>:</span>
           <ul>
             <li>
               <div>
@@ -366,7 +368,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -429,7 +431,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -457,7 +459,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/lexical_cast/">LexicalCast</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/lexical_cast/">LexicalCast</a>:</span>
           <ul>
             <li>
               <div>
@@ -475,7 +477,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/math/">Math</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/math/">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -494,7 +496,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -572,7 +574,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
@@ -598,7 +600,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/program_options/">Program Options</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/program_options/">Program Options</a>:</span>
           <ul>
             <li>
               <div>
@@ -612,7 +614,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/regex/">Regex</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/regex/">Regex</a>:</span>
           <ul>
             <li>
               <div>
@@ -631,7 +633,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/smart_ptr/">Smart Pointers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/smart_ptr/">Smart Pointers</a>:</span>
           <ul>
             <li>
               <div>
@@ -651,11 +653,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/test/">Test</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/test/">Test</a>:</span>
           <ul>
             <li>
               <div>
-                Boost.test v3.5 see the <a href="/doc/libs/master/libs/test/doc/html/boost_test/change_log.html">Change
+                Boost.test v3.5 see the <a href="/doc/libs/1_64_0_b2/libs/test/doc/html/boost_test/change_log.html">Change
                 log</a> section for more details.
               </div>
             </li>
@@ -707,7 +709,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/type_index/">TypeIndex</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/type_index/">TypeIndex</a>:</span>
           <ul>
             <li>
               <div>
@@ -733,7 +735,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/type_traits/">TypeTraits</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/type_traits/">TypeTraits</a>:</span>
           <ul>
             <li>
               <div>
@@ -746,7 +748,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/unordered/">Unordered</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/unordered/">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -761,7 +763,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
